--- a/package.json
+++ b/package.json
@@ -8,8 +8,15 @@
     "compile": "npx hardhat compile",
     "test_voice": "npx hardhat test test/voice.ts --network mumbai",
     "deploy_erc20": "npx hardhat run scripts/fm_deploy.ts --network mumbai",
+    "deploy_fcc": "npx hardhat run scripts/fm_deploy_fcc.ts --network goerli",
+    "deploy_fcr": "npx hardhat run scripts/fm_deploy_fcr.ts --network goerli",
+    "deploy_usdt": "npx hardhat run scripts/fm_deploy_usdt.ts --network goerli",
     "deploy_721": "npx hardhat run scripts/voice_deploy.ts --network mumbai",
+    "deploy_721_test": "npx hardhat run scripts/voice_deploy.ts --network goerli",
     "deploy_id": "npx hardhat run scripts/Id_card_deploy.ts --network mumbai",
+    "deploy_id_prd": "npx hardhat run scripts/Id_card_deploy.ts --network polygon",
+    "deploy_id_test": "npx hardhat run scripts/Id_card_deploy.ts --network goerli",
+    "deploy_all_erc20":"npm run deploy_fcc && npm run  deploy_fcr &&  npm run  deploy_usdt",
     "mintNft": "node src/index  NFT mint-nft "
   },
   "author": "",
