--- a/package.json
+++ b/package.json
@@ -10,6 +10,12 @@
     "deploy_erc20": "npx hardhat run scripts/fm_deploy.ts --network mumbai",
     "deploy_fcc": "npx hardhat run scripts/fm_deploy_fcc.ts --network goerli",
     "deploy_fcr": "npx hardhat run scripts/fm_deploy_fcr.ts --network goerli",
+    "deploy_nprd_fcc": "npx hardhat run scripts/fm_deploy_fcc.ts --network nprd",
+    "deploy_nprd_fcr": "npx hardhat run scripts/fm_deploy_fcr.ts --network nprd",
+    "deploy_npd_fcm": "npx hardhat run scripts/voice_deploy.ts --network nprd",
+    "deploy_npd_id": "npx hardhat run scripts/Id_card_deploy.ts --network nprd",
+    "deploy_p_fcc": "npx hardhat run scripts/fm_deploy_fcc.ts --network polygon",
+    "deploy_p_fcr": "npx hardhat run scripts/fm_deploy_fcr.ts --network polygon",
     "deploy_usdt": "npx hardhat run scripts/fm_deploy_usdt.ts --network goerli",
     "deploy_721": "npx hardhat run scripts/voice_deploy.ts --network mumbai",
     "deploy_721_test": "npx hardhat run scripts/voice_deploy.ts --network goerli",
@@ -34,7 +40,7 @@
     "@typescript-eslint/eslint-plugin": "^4.33.0",
     "@typescript-eslint/parser": "^4.33.0",
     "chai": "^4.3.6",
-    "dotenv": "^16.0.1",
+    "dotenv": "^16.0.2",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-config-standard": "^16.0.3",
@@ -50,6 +56,7 @@
     "prettier-plugin-solidity": "^1.0.0-beta.13",
     "solhint": "^3.3.7",
     "solidity-coverage": "^0.7.21",
+    "truffle-plugin-verify": "^0.5.28",
     "ts-node": "^10.8.1",
     "typechain": "^5.2.0",
     "typescript": "^4.7.4"
